--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -2,7 +2,7 @@ build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
 #build.home=build
 build.classes.dir=${build.home}/classes
-#build.test.classes=${build.home}/test/classes
+build.test.classes.dir=${build.home}/test/classes
 # Only compile against the classpath explicitly listed here:
 build.sysclasspath=ignore
 buildfile=nbproject/ide-targets.xml
@@ -29,12 +29,14 @@ file.reference.unit-java=test/unit/java
 includes=**
 jar.compress=false
 javac.classpath=\
+    lib/antlr4-runtime-4.9.3.jar:\
     lib/ErrorList.jar:\
     lib/guava-19.0.jar:\
     ${jedit.jar}:\
     lib/sigmaAntlr.jar:\
     lib/sigmakee.jar:\
     lib/sigmaUtils.jar:\
+    lib/tomcat-servlet-api-9.0.97.jar:\
     lib/tptp.jar
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -63,7 +65,6 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    lib/antlr4-runtime-4.9.3.jar:\
     lib/kryo-5.6.2.jar:\
     lib/minlog-1.3.1.jar:\
     lib/objenesis-3.4.jar:\
@@ -77,12 +78,12 @@ run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes}:\
+    ${build.test.classes.dir}:\
     ${run.classpath}
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
-src.dir=${file.reference.src-java}
+#src.dir=${file.reference.src-java}
 #test.unit.dir=${file.reference.unit-java}
 
 # Specific SUMOjEdit props
