--- a/build.xml
+++ b/build.xml
@@ -27,7 +27,7 @@
     <property name="javac.release" value="11"/>
     <property name="run.jvmargs" value="-Xmx10g -Xss1m"/>
 
-    <property name="test.file" value="${git.home}/sumo"/>
+    <property name="test.path" value="${git.home}/sumo"/>
 
     <path id="core.sourcepath">
         <pathelement path="src"/>
@@ -284,12 +284,12 @@ alias jedit="java -Xmx10g -Xss1m -jar $JEDIT_JAR"
         </exec>
     </target>
 
-    <target name="test.kif" depends="compile.test" description="Syntax check an individual *.kif file">
+    <target name="test.kif" depends="compile.test" description="Syntax check an individual *.kif file or directory of *.kif files">
         <java classname="com.articulate.sigma.parsing.SUMOParseTest"
               classpathref="run.test.classpath"
               fork="true">
             <jvmarg line="${run.jvmargs}"/>
-            <arg line="${test.file}"/>
+            <arg line="${test.path}"/>
         </java>
     </target>
 
