--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,7 +36,7 @@ javac.classpath=\
     lib/sigmaAntlr.jar:\
     lib/sigmakee.jar:\
     lib/sigmaUtils.jar:\
-    lib/tomcat-servlet-api-9.0.97.jar:\
+    lib/tomcat-servlet-api-9.0.107.jar:\
     lib/tptp.jar
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -68,8 +68,7 @@ run.classpath=\
     lib/kryo-5.6.2.jar:\
     lib/minlog-1.3.1.jar:\
     lib/objenesis-3.4.jar:\
-    lib/reflectasm-1.11.9.jar:\
-    lib/tomcat-servlet-api-9.0.97.jar
+    lib/reflectasm-1.11.9.jar
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
