--- a/config/SUMOjEdit.props
+++ b/config/SUMOjEdit.props
@@ -96,25 +96,27 @@ The AC feature in SUMOjEdit is designed to make writing and editing ontology ter
 easier, and less error-prone. By predicting what you intend to type, it reduces keystrokes \
 and helps ensure consistent use of terms across your files.\n\n\
 \
+###\n\n\
+\
 To use AC, simply begin typing a term. Depending on the selected mode, suggestions will \
 appear either inline, in the drop-down menu, or in both.\n\n\
 There are several modes of AC, each tailored to different editing preferences:\n\n\
 \
-OFF mode disables all AC functionality. You may choose this mode if you prefer manual \
-typing without any suggestions.\n\n\
+OFF mode disables all AC functionality. Select this mode if you prefer typing without \
+any suggestions.\n\n\
 \
 GHOST TEXT mode* displays suggestions inline, shown in a faint gray color directly after \
-the cursor. When this mode is enabled, pressing EITHER the RIGHT ARROW key OR the TAB key \
+the cursor. When this mode is enabled, pressing either the RIGHT ARROW key or the TAB key \
 accepts the suggestion.\n\n\
 \
 DROP-DOWN mode** provides a pop-up list of suggestions beneath the cursor. You can use the \
-UP and DOWN ARROW keys to navigate through the list and press ONLY the TAB key to insert \
+UP and DOWN ARROW keys to navigate through the list and press only the TAB key to insert \
 the highlighted term. This mode is useful when multiple possible completions exist.\n\n\
 \
 DUAL MODE combines Ghost Text mode and Drop-Down mode, offering both inline and pop-up \
 suggestions at the same time. This mode provides the most guidance and flexibility. To \
-accept the suggestions from the Drop-Down mode, press ONLY the TAB key; for Ghost Text \
-mode suggestion, press ONLY the RIGHT ARROW key.\n\n\
+accept a suggestion from the Drop-Down, press only the TAB key; for Ghost Text suggestion, \
+press only the RIGHT ARROW key.\n\n\
 \
 *Ghost Text mode only suggests words belonging to logical operators and some fundamental \
 relations in SUMO, such as "exists," "instance," "and," "or," "not," "domainSubclass," \
@@ -125,12 +127,12 @@ repository.\n\n\
 \
 ###\n\n\
 \
-You can switch between these modes at any time by navigating to Plugins menu > SUMOjEdit, \
-then selecting the desired AC mode. A small status message will confirm the change.\n\n\
+You can switch modes at any time by navigating to the Plugins menu > SUMOjEdit, then \
+selecting the desired AC mode. A small status message will confirm the change.\n\n\
 \
-If you find suggestions distracting or overwhelming, you may prefer Ghost Text mode for \
-subtle guidance or turning AC Off entirely. If you prefer more explicit support, the \
-Drop-Down mode or Dual Mode options may be better suited for you.\n\n\
+If you find suggestions distracting or overwhelming, try Ghost Text mode for subtle \
+guidance or turning AC Off entirely. If you prefer more explicit support, the Drop-Down \
+mode or Dual Mode options may be better suited for you.\n\n\
 \
 ###\n\n\
 \
