[Simon] Addressed an issue where the Ghost Text mode stopped working after the multithreadding error/race condition fix was applied in the last commit.

--- a/config/SUMOjEdit.props
+++ b/config/SUMOjEdit.props
@@ -84,7 +84,7 @@ sumojedit.ac.mode.dropdown.label=AC: Drop-Down Mode
 sumojedit.ac.mode.both.label=AC: Dual Mode
 
 # Default AC mode (read at startup and used by the toggles)
-sumojedit.ac.mode.OFF
+sumojedit.ac.mode=BOTH
 
 # ===== NEW: User Guide dialog strings =====
 # Title for the dialog
