Implemented TPTP formatter for SUMOjEdit with proper preservation of all statement components and adherence to TPTP formatting conventions.
Created TPTPFormatter.java class that parses TPTP
statements into components (name, role, formula,
source) and formats them with correct indentation
and line breaks. Key technical challenges resolved
include: preserving inference and file source
information as the fourth component of statements,
eliminating double-wrapping parentheses through
careful outermost parenthesis stripping,
implementing semantic-aware line breaking where
implications and conjunctions start new lines
while negations and quantifiers remain inline with
their associated expressions, and developing a
state-based FormulaFormatter that tracks context
to avoid orphaned parentheses and maintain proper
nesting depth. The formatter strips outermost
parentheses only when they wrap entire expressions,
handles string literals correctly to avoid breaking
on delimiters within quoted text, and maintains
TPTP-standard four-space indentation increments
for nested structures. Also added integration with
external tptp4X tool as fallback option and menu
actions in SUMOjEdit for format TPTP and configure
TPTP4X path.

--- a/config/SUMOjEdit.props
+++ b/config/SUMOjEdit.props
@@ -56,6 +56,10 @@ plugin.com.articulate.sigma.jedit.SUMOjEditPlugin.menu=\
   sumojedit.from-tptp \
   sumojedit.to-tptp \
   - \
+  sumojedit.check-tptp-errors \
+  sumojedit.format-tptp \
+  sumojedit.configure-tptp4x \
+  - \
   sumojedit.ac.user-guide \
   - \
   sumojedit.ac.mode.ghost \
@@ -75,6 +79,11 @@ sumojedit.chooseE.label=select EProver
 sumojedit.query-exp.label=query on highlighted expression
 sumojedit.to-tptp.label=SUO-KIF to TPTP
 sumojedit.from-tptp.label=SUO-KIF from TPTP
+
+# ===== TPTP Error Checking and Formatting action labels =====
+sumojedit.check-tptp-errors.label=Check TPTP Errors
+sumojedit.format-tptp.label=Format TPTP
+sumojedit.configure-tptp4x.label=Configure TPTP4X Path
 
 # ===== User Guide menu item label =====
 sumojedit.ac.user-guide.label=AutoComplete (AC) User Guide
