TPTP-Language axiom editing capabilities are now part of SUMOjEdit (TPTP4x).

--- a/config/SUMOjEdit.props
+++ b/config/SUMOjEdit.props
@@ -55,10 +55,8 @@ plugin.com.articulate.sigma.jedit.SUMOjEditPlugin.menu=\
   - \
   sumojedit.from-tptp \
   sumojedit.to-tptp \
-  - \
-  sumojedit.check-tptp-errors \
-  sumojedit.format-tptp \
-  sumojedit.configure-tptp4x \
+  sumojedit.tptp.format-buffer \
+  sumojedit.tptp.check-buffer \
   - \
   sumojedit.ac.user-guide \
   - \
@@ -80,10 +78,12 @@ sumojedit.query-exp.label=query on highlighted expression
 sumojedit.to-tptp.label=SUO-KIF to TPTP
 sumojedit.from-tptp.label=SUO-KIF from TPTP
 
-# ===== TPTP Error Checking and Formatting action labels =====
-sumojedit.check-tptp-errors.label=Check TPTP Errors
-sumojedit.format-tptp.label=Format TPTP
-sumojedit.configure-tptp4x.label=Configure TPTP4X Path
+# --- TPTP (tptp4X) ---
+sumojedit.tptp.format-buffer.label=Format TPTP (tptp4X)
+sumojedit.tptp.check-buffer.label=Check TPTP (tptp4X)
+# Absolute path to tptp4X (overrideable in jEdit props)
+sumojedit.tptp4x.path=/Users/sdeng/workspace/SUMOjEdit/tptp4X
+
 
 # ===== User Guide menu item label =====
 sumojedit.ac.user-guide.label=AutoComplete (AC) User Guide
