Renaming of a label in ATP Configurator: "Modens Ponens" is now "Modus Ponens"

--- a/config/SUMOjEdit.props
+++ b/config/SUMOjEdit.props
@@ -118,7 +118,7 @@ sumojedit.atp.mode=tptp      # tptp|tff|thf
 sumojedit.atp.closedWorld=false
 sumojedit.atp.engine=vampire  # leo3|eprover|vampire
 sumojedit.atp.vampire.mode=casc   # casc|avatar|custom
-sumojedit.atp.modusPonens=false
+sumojedit.atp.ModusPonens=false
 sumojedit.atp.dropOnePremise=false
 sumojedit.atp.showEnglish=true
 sumojedit.atp.useLLM=false
